envoy/lds.yaml
resources:
- "@type": type.googleapis.com/envoy.config.listener.v3.Listener        
  name: local_net
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 80
  filter_chains:
  - filters:
    - name: envoy.filters.network.http_connection_manager
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
        codec_type: auto
        stat_prefix: ingress_http
        route_config:
          name: local_route
          virtual_hosts:
          - name: pihole
            domains:
            - "192.168.1.126"
            routes:
            - match:
                prefix: "/pihole/"
              route:
                prefix_rewrite: "/"
                cluster: pihole
          - name: certbot
            domains:
            - "homeautomation-api.kvalvaag-tech.com"
            routes:
            - match:
                prefix: "/.well-known/acme-challenge"
              route:
                cluster: certbot
        http_filters:
        - name: envoy.filters.http.router
- "@type": type.googleapis.com/envoy.config.listener.v3.Listener        
  name: external_secure
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 443
  filter_chains:
  - filters:
    - name: envoy.filters.network.http_connection_manager
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
        codec_type: auto
        stat_prefix: ingress_http
        route_config:
          name: local_route
          virtual_hosts:
          - name: homeautomation-api
            domains:
            - "homeautomation-api.kvalvaag-tech.com"
            routes:
            - match:
                prefix: "/"
              route:
                cluster: watering-control-backend
        http_filters:
        - name: envoy.filters.http.router
    transport_socket:  
      name: envoy.transport_socket.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext 
        common_tls_context:
          tls_certificates:
          - certificate_chain: { filename: "/etc/letsencrypt/live/homeautomation-api.kvalvaag-tech.com/fullchain.pem" }
            private_key: { filename: "/etc/letsencrypt/live/homeautomation-api.kvalvaag-tech.com/privkey.pem" }
